"Loopstudio website updates."

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="px-[50px] bg-hero-pattern bg-cover bg-no-repeat bg-top flex-wrap" >
+    <header class="px-[50px] bg-hero-pattern bg-cover bg-no-repeat bg-top flex-wrap h-[100%] w-" >
         <nav class="flex justify-between p-[50px]">
             <div><h2 class="text-white text-2xl font-bold">LoopStudios</h2></div>
             <ul class="flex gap-3 text-white text-sm ">
