--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,25 @@
     <link rel="shortcut icon" href="images/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="px-[50px] bg-hero-pattern bg-cover bg-no-repeat bg-top flex-wrap h-[100%] w-" >
-        <nav class="flex justify-between p-[50px]">
-            <div><h2 class="text-white text-2xl font-bold">LoopStudios</h2></div>
-            <ul class="flex gap-3 text-white text-sm ">
-                <li class="hover:border-b-2 border-white"><a href="#home">Home</a></li>
+    <header class="px-[50px] bg-hero-pattern bg-cover bg-no-repeat bg-top flex-wrap h-[70vh] w-[100vw]" >
+        <nav class="flex justify-between mx-[50px] p-[30px]">
+            <div><h2 class="text-white text-4xl font-bold font-alata">loopstudios</h2></div>
+            <ul class="flex gap-3 text-white text-sm font-alata">
+                <li class="hover:border-b-2 border-white"><a href="#about">About</a></li>
                 <li class="hover:border-b-2 border-white"><a href="#career">Career</a></li>
                 <li class="hover:border-b-2 border-white"><a href="#event">Events</a></li>
                 <li class="hover:border-b-2 border-white"><a href="#product">Products</a></li>
                 <li class="hover:border-b-2 border-white"><a href="#support">Supports</a></li>
             </ul>
         </nav>
-        <div class="p-[50px]">
-            <h1 class="font-normal text-white text-4xl border-2 w-[30%]">
-                IMMERSIVE <br>EXPERIENCES <br> THAT DELIVERS
+        <div class="ml-[75px] mt-[80px]">
+            <h1 class="font-thin text-white text-5xl border-2 px-[30px] py-[20px] font-Josefin Sans lg:w-[37%] md:w-[35%]">
+                IMMERSIVE <br>EXPERIENCES <br> THAT DELIVER
             </h1>
         </div>
     </header>
