--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LoopStudios</title>
-    <link rel="shortcut icon" href="images/logo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,9 +12,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="px-[50px] bg-hero-pattern bg-cover bg-no-repeat bg-top flex-wrap h-[70vh] w-[100vw]" >
+    <header class="px-[50px] bg-hero-pattern bg-cover bg-no-repeat bg-top flex-wrap h-[70vh] w-[100%]" >
         <nav class="flex justify-between mx-[50px] p-[30px]">
-            <div><h2 class="text-white text-4xl font-bold font-alata">loopstudios</h2></div>
+            <div> <h2 class="text-white text-4xl font-bold font-alata">loopstudios</h2> </div>
             <ul class="flex gap-3 text-white text-sm font-alata">
                 <li class="hover:border-b-2 border-white"><a href="#about">About</a></li>
                 <li class="hover:border-b-2 border-white"><a href="#career">Career</a></li>
@@ -29,5 +29,20 @@
             </h1>
         </div>
     </header>
+
+        <section class="m-[40px]">
+            <div class="m-auto absoulte ">
+                <img src="./images/image-interactive.jpg" alt="" class="max-w-[500px]">
+            </div>
+            <div>
+                <h1 class="font-thin text-3xl font-Josefin Sans">THE LEADER IN <br> INTERACTIVE VR</h1>
+                <p class="font-Josefin Sans text-sm ">Founded in 2011, Loopstudios has been producing world-class virtual reality 
+                    projects for some of the besr companies aroud the globe, Our award-winning 
+                    have transformed bussiness through digital experiences that bind to their brand.
+                </p>
+            </div>
+
+        </section>
+    
 </body>
 </html>
