--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,10 @@
     </header>
 
         <section class="m-[40px]">
-            <div class="m-auto absoulte ">
+            <div class="m-[30px] relative">
                 <img src="./images/image-interactive.jpg" alt="" class="max-w-[500px]">
             </div>
-            <div>
+            <div class="w-[90px] absolute left-4">
                 <h1 class="font-thin text-3xl font-Josefin Sans">THE LEADER IN <br> INTERACTIVE VR</h1>
                 <p class="font-Josefin Sans text-sm ">Founded in 2011, Loopstudios has been producing world-class virtual reality 
                     projects for some of the besr companies aroud the globe, Our award-winning 
