--- a/public/index.html
+++ b/public/index.html
@@ -12,22 +12,22 @@
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="px-[50px] bg-hero-pattern bg-cover bg-no-repeat bg-top flex-wrap h-[70vh] w-[100%]" >
-        <nav class="flex justify-between mx-[50px] p-[30px]">
-            <div> <h2 class="text-white text-4xl font-bold font-alata">loopstudios</h2> </div>
-            <ul class="flex flex-row gap-3 text-white text-sm font-alata">
-                <li class="hover:border-b-2 border-white"><a href="#about">About</a></li>
-                <li class="hover:border-b-2 border-white"><a href="#career">Career</a></li>
-                <li class="hover:border-b-2 border-white"><a href="#event">Events</a></li>
-                <li class="hover:border-b-2 border-white"><a href="#product">Products</a></li>
-                <li class="hover:border-b-2 border-white"><a href="#support">Supports</a></li>
+    <header class="px-4 md:px-[50px] bg-hero-pattern bg-cover bg-no-repeat bg-top flex-wrap h-[70vh] w-full" >
+        <nav class="flex justify-between mx-4 md:mx-[50px] p-4">
+            <div> <h2 class="text-white text-2xl md:text-4xl font-bold font-alata">loopstudios</h2> </div>
+            <ul class="hidden md:flex flex-row space-x-4 text-white text-sm font-alata">
+                <li class="border-b-2 border-transparent hover:border-white text-white transition"><a href="#about">About</a></li>
+                <li class="border-b-2 border-transparent hover:border-white text-white transition"><a href="#career">Career</a></li>
+                <li class="border-b-2 border-transparent hover:border-white text-white transition"><a href="#event">Events</a></li>
+                <li class="border-b-2 border-transparent hover:border-white text-white transition"><a href="#product">Products</a></li>
+                <li class="border-b-2 border-transparent hover:border-white text-white transition"><a href="#support">Supports</a></li>
             </ul>
-            <div class="flex z-50 lg:hidden">
-                <img src="./images/bars-solid.svg" alt="menu" class="w-[50px] h-[50px]">
+            <div class="flex z-50 md:hidden">
+                <img src="./images/bars-solid.svg" alt="menu" class="w-[30px] h-[30px]">
             </div>
         </nav>
-        <div class="ml-[75px] mt-[80px]">
-            <h1 class="font-thin text-white text-5xl border-2 px-[30px] py-[20px] font-Josefin Sans lg:w-[37%] md:w-[35%]">
+        <div class="ml-4 md:ml-[75px] mt-8 md:mt-[80px]">
+            <h1 class="font-thin text-white text-3xl md:text-5xl border-2 px-4 md:px-[30px] py-2 md:py-[20px] font-Josefin Sans lg:w-[37%] md:w-[35%]">
                 IMMERSIVE <br>EXPERIENCES <br> THAT DELIVER
             </h1>
         </div>
